# lockbox

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: encryption.rs  kdf.rs  master.rs  mod.rs  nonce.rs  utils.rs
src-tauri/src/state/: storage.rs
src-tauri/src/storage/: master.rs  mod.rs  passwords.rs
src-tauri/src/storage/model/: entry.rs  metadata.rs  mod.rs  password.rs
src/app/: store.ts
src/app/features/passwords/: password.ts  passwordsSlice.ts  utils.ts
src/app/routing/: index.ts
src/app/routing/loaders/: root.ts
src/components/: EntryLayout.tsx  ItemsBar.tsx  Sidebar.tsx  TrafficLights.tsx  WindowFrame.tsx
src/components/ui/: ActivityIndicator.tsx  Input.tsx  PasswordCard.tsx  SidebarItem.tsx  Typography.tsx
src/lib/: useChannel.ts  windowControls.ts
src/routes/: AllItems.tsx  CreatePassword.tsx  CreateVault.tsx  ErrorBoundary.tsx  PasswordView.tsx  UnlockVault.tsx
