[package]
name = "lockbox"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "window-minimize", "window-unmaximize", "window-maximize", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
argon2 = "0.5.2"
aes = "0.8.3"
anyhow = "1.0.75"
aes-gcm = "0.10.3"
rusqlite = { version = "0.30.0", features = ["bundled", "uuid", "serde_json", "blob"] }
uuid = { version = "1.5.0", features = ["serde"] }
lazy_static = "1.4.0"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
